[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
shared = { path = "../shared" }
risc0-zkvm = { version = "3.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"